--- a/src/pages/post-detail/components/comment/index.module.less
+++ b/src/pages/post-detail/components/comment/index.module.less
@@ -24,12 +24,12 @@
   gap: 4px;
 
   .label {
-    color: rgba(0, 0, 0, 0.45);
+    color: rgba(255, 255, 255, 0.45);
     font-size: 14px;
   }
 
   .value {
-    color: rgba(0, 0, 0, 0.88);
+    color: rgba(255, 255, 255, 0.85);
     font-size: 24px;
     font-family:
       -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
@@ -63,17 +63,17 @@
 
 .nickname {
   font-weight: 500;
-  color: rgba(0, 0, 0, 0.88);
+  color: rgba(255, 255, 255, 0.85);
 }
 
 .time {
-  color: rgba(0, 0, 0, 0.45);
+  color: rgba(255, 255, 255, 0.45);
   font-size: 12px;
 }
 
 .content {
   margin-bottom: 8px;
-  color: rgba(0, 0, 0, 0.88);
+  color: white;
   font-size: 14px;
   line-height: 1.5715;
 }
